--- a/Display types, floatings, positioning and grid system/cajas.html
+++ b/Display types, floatings, positioning and grid system/cajas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sp">
+<html lang="es">
 <head>
 	<title>Cajas</title>
 	<link rel="stylesheet" type="text/css" href="cajas.css">
