--- a/Positioning/Nuestras Coders/index.html
+++ b/Positioning/Nuestras Coders/index.html
@@ -6,57 +6,103 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<div id="cabecera">
-		<img class="logo" src="img/logo.png">
-		<hr class="rayamenú1">
-		<h2 class="menú">Inicio</h2>
-		<h2 class="menú">Sobre Nosotros</h2>
-		<h2 class="menú">Nuestras Coders</h2>
-		<h2 class="Menú">Contacto</h2>
-		<img class="grupal" src="img/grupal.jpg">
-		<hr class="rayamenú2">
-
-
-
-
-
-
-
-
-
-	<div class="caja">	
-		<h3 class="nuestrascoders">Nuestras coders</h3>
-		<hr class="lineacoders">
+<div id="contenedorglobal">
+	<img class="logo" src="img/logo.png">
+	<hr class="menulinehr1">
+	<div class="menu">
+		<h3 class="opciones">Inicio&nbsp;&nbsp;|</h3>
+		<h3 class="opciones">Sobre Nosotros&nbsp;&nbsp;|</h3>
+		<h3 class="opciones"><a href="#link">Nuestras Coders&nbsp;&nbsp;|</a></h3>
+		<h3 class="opciones">Contacto</h3>
 	</div>
-	<div id="container">
-		<div class="block">
-			<div class="pic" class="picfloat">
-				<img class="profile" src="img/profile-1.png">
-				<p>Nombre y Apellido</p>
+	<hr class="menulinehr2">
+	<img class="grupal" src="img/grupal.jpg">
+	<hr class="lineatexto1">
+	<div class="cajatexto">
+		<p>Laboratoria existe para encontrar jóvenes mujeres con potencial pero sin acceso a educación superior de claidad y transformarlas en talentosas desarrolladoras web que sirven clientes locales e internacionales con soluciones digitales de excelente calidad.</p>
+	</div>
+	<hr class="lineatexto2">
+	<div class="cajanuestrascoders">
+		<div class="caja">	
+			<h3 class="nuestrascoders" id="link">Nuestras coders</h3>
+			<hr class="lineacoders">
+		</div>
+		<div id="container">
+			<div class="block">
+				<div class="pic" class="picfloat">
+					<img class="profile" src="img/profile-1.png">
+					<p class="nombreyapellido">Nombre y Apellido</p>
+				</div>
+				<div class="pic">
+					<img class="profile" src="img/profile-2.png">
+					<p class="nombreyapellido">Nombre y Apellido</p>
+					</div>
+				<div class="pic">
+					<img class="profile" src="img/profile-3.png">
+					<p class="nombreyapellido">Nombre y Apellido</p>
+				</div>
 			</div>
-			<div class="pic">
-				<img class="profile" src="img/profile-2.png">
-				<p>Nombre y Apellido</p>
-			</div>
-			<div class="pic">
-				<img class="profile" src="img/profile-3.png">
-				<p>Nombre y Apellido</p>
+			<div class="block">
+				<div class="pic" class="picfloat">
+					<img class="profile" src="img/profile-4.png">
+					<p class="nombreyapellido">Nombre y Apellido</p>
+				</div>
+				<div class="pic">
+					<img class="profile" src="img/profile-5.png">
+					<p class="nombreyapellido">Nombre y Apellido</p>
+				</div>
+				<div class="pic">
+					<img class="profile" src="img/profile-6.png">
+					<p class="nombreyapellido">Nombre y Apellido</p>
+				</div>
 			</div>
 		</div>
-		<div class="block">
-			<div class="pic" class="picfloat">
-				<img class="profile" src="img/profile-4.png">
-				<p>Nombre y Apellido</p>
+	</div>
+	<div class="informacion">
+		<div class="fotoinformacion"></div>
+		<h1 class="tituloinformacion">Nombre y Apellido</h1>
+		<p class="pinformacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
+	<div class="habilidadesyportafolio">
+		<h2 class="habilidades">Habilidades</h2>
+		<div class="plomo1">
+			<p class="letrashabilidades">HTML</p>
+		</div>
+		<div class="plomo2">
+			<p class="letrashabilidades">CSS</p>
+		</div>
+		<div class="plomo3">
+			<p class="letrashabilidades">JavaScript</p>
+		</div>
+		<h2 class="habilidades">Portafolio</h2>	
+		<div class="portafolio1">
+			<div class="pic2">
+				<img class="profile2" src="img/p5.jpg">
 			</div>
-			<div class="pic">
-				<img class="profile" src="img/profile-5.png">
-				<p>Nombre y Apellido</p>
+			<div class="pic2">
+				<img class="profile2" src="img/p6.jpg">
 			</div>
-			<div class="pic">
-				<img class="profile" src="img/profile-6.png">
-				<p>Nombre y Apellido</p>
+			<div class="pic2">
+				<img class="profile2" src="img/p8.jpg">
+			</div>
+		</div>
+		<div class="portafolio1">
+			<div class="pic2">
+				<img class="profile2" src="img/p5.jpg">
+			</div>
+			<div class="pic2">
+				<img class="profile2" src="img/p6.jpg">
+			</div>
+			<div class="pic2">
+				<img class="profile2" src="img/p8.jpg">
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
