--- a/Grid System/index.html
+++ b/Grid System/index.html
@@ -10,22 +10,24 @@
 </head>
 <body>
 	<header>
-		<div class="row">
-			<div class="col-2">
-				<img class="logo" src="img/logo.png">
-			</div>
-			<div class="col-10">
-				<nav class="nav-header">
-					<ul>
-						<li><a href="#">LIVE</a></li>
-						<li><a href="#">SHOWS</a></li>
-						<li><a href="#">SUBSCRIBE</a></li>
-						<li><a href="#">SCHEDULE</a></li>
-						<li><a href="#">SUPPORT</a></li>
-						<li><a href="#">ADVERTISE</a></li>
-						<li><a href="#">CONTACT</a></li>
-					</ul>
-				</nav>
+		<div class="container">
+			<div class="row">
+				<div class="col-2">
+					<img class="logo" src="img/logo.png">
+				</div>
+				<div class="col-10">
+					<nav class="nav-header">
+						<ul>
+							<li><a href="#">LIVE</a></li>
+							<li><a href="#">SHOWS</a></li>
+							<li><a href="#">SUBSCRIBE</a></li>
+							<li><a href="#">SCHEDULE</a></li>
+							<li><a href="#">SUPPORT</a></li>
+							<li><a href="#">ADVERTISE</a></li>
+							<li><a href="#">CONTACT</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -54,14 +56,194 @@
 		</div>
 	</section>
 	<article>
-		<div class="col-10">
+		<div class="container2">	
 			<div class="row">
-				<div class="col-2">
-					<img class="imgarticle" src="img/thumbs/amplified.jpg">
-					<p><a class="link3" href="#">Amplified</a></p>
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/amplified.jpg">
+						<p><a class="link3" href="#">Amplified</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/back-to-work.jpg">
+						<p><a class="link3" href="#">Back to work</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/the-big-show.jpg">
+						<p><a class="link3" href="#">The big show</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/better-know.jpg">
+						<p><a class="link3" href="#">Better know</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/cash-corner.jpg">
+						<p><a class="link3" href="#">Cash Corner</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/changelog.jpg">
+						<p><a class="link3" href="#">Changelog</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/critical-path.jpg">
+						<p><a class="link3" href="#">Critical Path</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/dan.jpg">
+						<p><a class="link3" href="#">San Benjamin Hour</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/dlc.jpg">
+						<p><a class="link3" href="#">DLC</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/Frequency.jpg">
+						<p><a class="link3" href="#">Frequency</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/home-work.jpg">
+						<p><a class="link3" href="#">Home Work</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/ihnatko.jpg">
+						<p><a class="link3" href="#">Ihnatko Almanac</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/ohyes.jpg">
+						<p><a class="link3" href="#">iOhYes</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/getting-there.jpg">
+						<p><a class="link3" href="#">Getting There</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/movies.jpg">
+						<p><a class="link3" href="#">5by5 at the Movies</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/mac-power.jpg">
+						<p><a class="link3" href="#">Mac Power Users</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/on-the-grid.jpg">
+						<p><a class="link3" href="#">On the Grid</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/on-taking-pictures.jpg">
+						<p><a class="link3" href="#">On Taking Pictures</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/latest-paleo.jpg">
+						<p><a class="link3" href="#">Latest in Paleo</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/pipeline.jpg">
+						<p><a class="link3" href="#">Pipeline</a></p>
+					</div>
+				</div>
+			</div>
+						<div class="row">
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/pipeline-classic.jpg">
+						<p><a class="link3" href="#">Pipeline Classic</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/podcast-method.jpg">
+						<p><a class="link3" href="#">Podcast Method</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/quit.jpg">
+						<p><a class="link3" href="#">Quit</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/ruby-on-rails-podcast.jpg">
+						<p><a class="link3" href="#">Ruby on Rails Podcast</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/specials.jpg">
+						<p><a class="link3" href="#">5by5 specials</a></p>
+					</div>
+				</div>
+			</div>
+						<div class="row">
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/steady.jpg">
+						<p><a class="link3" href="#">Steady</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/supercharged.jpg">
+						<p><a class="link3" href="#">Supercharged</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/web-ahead.jpg">
+						<p><a class="link3" href="#">Web Ahead</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/write-for-life.jpg">
+						<p><a class="link3" href="#">Write For Your Life</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/after-dark.jpg">
+						<p><a class="link3" href="#">After Dark</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/human-survival.jpg">
+						<p><a class="link3" href="#">Ankward Human Survival Guide</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/morning-dump.jpg">
+						<p><a class="link3" href="#">Morning Dump</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/hablo-geek.jpg">
+						<p><a class="link3" href="#">HabloGeek</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/puromac.jpg">
+						<p><a class="link3" href="#">Puromac</a></p>
+					</div>
+					<div class="col-2 col-2article">
+						<img class="imgarticle" src="img/thumbs/tech-douchebags.jpg">
+						<p><a class="link3" href="#">Tech Douchebags</a></p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</article>
+	<aside>
+		<div class="row">
+				<div class="col-2">
+					<h3>Suscribe to 5by5</h3>
+					<div class="cajaaside1">
+						<div class="cajaicons">
+							<img class="icons" src="img/icons/itunes.png">
+							<img class="icons" src="img/icons/rss.png">
+							<img class="icons" src="img/icons/podcast.png">
+							<p><a class="link4" href="#">5by5 on iTunes</p>
+							<p><a class="link4" href="#">Master RSS Feed</a></p>
+							<p><a class="link4" href="#">Pocket Casts</a></p>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>
+	</aside>
 </body>
 </html>
