--- a/Grid System/index.html
+++ b/Grid System/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>5by5</title>
 	<link rel="stylesheet" href="css/grid-system.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="favicon.ico">
 </head>
@@ -16,234 +16,257 @@
 					<img class="logo" src="img/logo.png">
 				</div>
 				<div class="col-10">
-					<nav class="nav-header">
+					<nav class="nav_header">
 						<ul>
 							<li><a href="#">LIVE</a></li>
 							<li><a href="#">SHOWS</a></li>
 							<li><a href="#">SUBSCRIBE</a></li>
 							<li><a href="#">SCHEDULE</a></li>
 							<li><a href="#">SUPPORT</a></li>
-							<li><a href="#">ADVERTISE</a></li>
 							<li><a href="#">CONTACT</a></li>
 						</ul>
-					</nav>
+					</nav>	
 				</div>
 			</div>
 		</div>
 	</header>
 	<section>
-		<div class="row">
-			<h2>Latest episodes</h2>
-			<p><a class= "link1" href="#">More episodes &#8594;</a></p>
-			<div class="col-12">
-				<div class="col-3">
-				<img class="imgsection" class= "borders" src="img/dlc.jpg">
-				<p><a class="link2" href="#">DLC 83</a></p>
+		<div class="container">
+			<div class="row">
+				<div class="col-5">
+					<h3>Latest episodes<span><a class="more_episodes"href="#">More episodes &#8594</a></span></h3>
 				</div>
-				<div class="col-3">
-				<img class="imgsection" src="img/almanac.jpg">
-				<p><a class="link2" href="#">Ihnatko Almanac 149</a></p>
+			</div>
+			<div class="row">
+				<div class="col-3 inline-block">
+					<img class="img_section img_border" src="img/thumbs/dlc.jpg">
+					<p><a class="a_section" href="#">DLC 83</a></p>
 				</div>
-				<div class="col-3">
-				<img class="imgsection" src="img/onthegrid.jpg">
-				<p><a class="link2" href="#">On the grid 124</a></p>
+				<div class="col-3 inline-block">
+					<img class="img_section img_border" src="img/thumbs/ihnatko.jpg">
+					<p><a class="a_section" href="#">Ihnatko Almanac 149</a></p>
 				</div>
-				<div class="col-3">
-				<img class="imgsection" src="img/changelog.jpg">
-				<p><a class="link2" href="#">Changelog 165</a></p>
+				<div class="col-3 inline-block">
+					<img class="img_section img_border" src="img/thumbs/on-the-grid.jpg">
+					<p><a class="a_section" href="#">On the grid 124</a></p>
+				</div>
+				<div class="col-3 inline-block">
+					<img class="img_section img_border" src="img/thumbs/changelog.jpg">
+					<p><a class="a_section" href="#">Changelog 165</a></p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<article>
-		<div class="container2">	
-			<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/amplified.jpg">
-						<p><a class="link3" href="#">Amplified</a></p>
+		<div class="container">
+			<div class="row inline-block">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/amplified.jpg">
+					<p><a class="a_article" href="#">Amplified</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/back-to-work.jpg">
+					<p><a class="a_article" href="#">Back to work</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/the-big-show.jpg">
+					<p><a class="a_article" href="#">The big show</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/better-know.jpg">
+					<p><a class="a_article" href="#">Better know</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/cash-corner.jpg">
+					<p><a class="a_article" href="#">Cash corner</a></p>
+				</div>
+				<div class="col-2 texto_derecha">
+					<h4>Subscribe to 5by5</h4>
+					<hr>
+					<div class="caja_icons">
+						<img class="icons" src="img/icons/itunes.png">
+						<img class="icons" src="img/icons/rss.png">
+						<img class="icons" src="img/icons/podcast.png">
 					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/back-to-work.jpg">
-						<p><a class="link3" href="#">Back to work</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/the-big-show.jpg">
-						<p><a class="link3" href="#">The big show</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/better-know.jpg">
-						<p><a class="link3" href="#">Better know</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/cash-corner.jpg">
-						<p><a class="link3" href="#">Cash Corner</a></p>
+					<div class="caja_links">
+						<p class="p_link"><a class="a_icons" href="#">5by5 on iTunes</a></p>
+						<p class="p_link"><a class="a_icons" href="#">Master RSS Feed</a></p>
+						<p class="p_link"><a class="a_icons" href="#">Pocket Casts</a></p>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/changelog.jpg">
-						<p><a class="link3" href="#">Changelog</a></p>
+			<div class="row inline-block row2">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/changelog.jpg">
+					<p><a class="a_article" href="#">Changelog</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/critical-path.jpg">
+					<p><a class="a_article" href="#">Critical Path</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/dan.jpg">
+					<p><a class="a_article" href="#">Dan Benjamin Hour</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/dlc.jpg">
+					<p><a class="a_article" href="#">DLC</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/frequency.jpg">
+					<p><a class="a_article" href="#">Frequency</a></p>
+				</div>
+				<div class="col-2 texto_derecha">
+					<h4>5by5 Apps</h4>
+					<hr>
+					<div class="caja_icons">
+						<img class="icons" src="img/icons/radio.png">
+						<img class="icons" src="img/icons/pencil.png">
 					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/critical-path.jpg">
-						<p><a class="link3" href="#">Critical Path</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/dan.jpg">
-						<p><a class="link3" href="#">San Benjamin Hour</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/dlc.jpg">
-						<p><a class="link3" href="#">DLC</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/Frequency.jpg">
-						<p><a class="link3" href="#">Frequency</a></p>
+					<div class="caja_links">
+						<p class="p_link"><a class="a_icons" href="#">5by5 Radio for iOS</a></p>
+						<p class="p_link"><a class="a_icons" href="#">5by5 for Mac OS X</a></p>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/home-work.jpg">
-						<p><a class="link3" href="#">Home Work</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/ihnatko.jpg">
-						<p><a class="link3" href="#">Ihnatko Almanac</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/ohyes.jpg">
-						<p><a class="link3" href="#">iOhYes</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/getting-there.jpg">
-						<p><a class="link3" href="#">Getting There</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/movies.jpg">
-						<p><a class="link3" href="#">5by5 at the Movies</a></p>
+			<div class="row inline-block row3">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/home-work.jpg">
+					<p><a class="a_article" href="#">Home Work</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/ihnatko.jpg">
+					<p><a class="a_article" href="#">Ihnatko Almanac</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/ohyes.jpg">
+					<p><a class="a_article" href="#">iOhYes</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/getting-there.jpg">
+					<p><a class="a_article" href="#">Getting There</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article" src="img/thumbs/movies.jpg">
+					<p><a class="a_article" href="#">5by5 at the Movies</a></p>
+				</div>
+				<div class="col-2 texto_derecha">
+					<hr class="lasthr">
+					<div class="caja_links2">
+						<p class="p_link">Bandwith for July 2015 is sponsored by <a class="a_icons" href="#">CacheFly: The fastes, most reliable CDN in the business</a></p>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/mac-power.jpg">
-						<p><a class="link3" href="#">Mac Power Users</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/on-the-grid.jpg">
-						<p><a class="link3" href="#">On the Grid</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/on-taking-pictures.jpg">
-						<p><a class="link3" href="#">On Taking Pictures</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/latest-paleo.jpg">
-						<p><a class="link3" href="#">Latest in Paleo</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/pipeline.jpg">
-						<p><a class="link3" href="#">Pipeline</a></p>
-					</div>
+			<div class="row inline-block row4">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/mac-power.jpg">
+					<p><a class="a_article" href="#">Mac Power Users</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/on-the-grid.jpg">
+					<p><a class="a_article" href="#">On the Grid</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/on-taking-pictures.jpg">
+					<p><a class="a_article" href="#">On Taking Pictures</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/latest-paleo.jpg">
+					<p><a class="a_article" href="#">Latest in Paleo</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/pipeline.jpg">
+					<p><a class="a_article" href="#">Pipeline</a></p>
 				</div>
 			</div>
-						<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/pipeline-classic.jpg">
-						<p><a class="link3" href="#">Pipeline Classic</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/podcast-method.jpg">
-						<p><a class="link3" href="#">Podcast Method</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/quit.jpg">
-						<p><a class="link3" href="#">Quit</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/ruby-on-rails-podcast.jpg">
-						<p><a class="link3" href="#">Ruby on Rails Podcast</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/specials.jpg">
-						<p><a class="link3" href="#">5by5 specials</a></p>
-					</div>
+			<div class="row inline-block row5">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/pipeline-classic.jpg">
+					<p><a class="a_article" href="#">Pipeline Classic</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/podcast-method.jpg">
+					<p><a class="a_article" href="#">Podcast Method</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/quit.jpg">
+					<p><a class="a_article" href="#">Quit</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/ruby-on-rails-podcast.jpg">
+					<p><a class="a_article" href="#">Ruby on Rails Podcast</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/specials.jpg">
+					<p><a class="a_article" href="#">5by5 Specials</a></p>
 				</div>
 			</div>
-						<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/steady.jpg">
-						<p><a class="link3" href="#">Steady</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/supercharged.jpg">
-						<p><a class="link3" href="#">Supercharged</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/web-ahead.jpg">
-						<p><a class="link3" href="#">Web Ahead</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/write-for-life.jpg">
-						<p><a class="link3" href="#">Write For Your Life</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/after-dark.jpg">
-						<p><a class="link3" href="#">After Dark</a></p>
-					</div>
+			<div class="row inline-block row5">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/steady.jpg">
+					<p><a class="a_article" href="#">Steady</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/supercharged.jpg">
+					<p><a class="a_article" href="#">Supercharged</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/web-ahead.jpg">
+					<p><a class="a_article" href="#">Web Ahead</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/write-for-life.jpg">
+					<p><a class="a_article" href="#">Write For Your Life</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin" src="img/thumbs/after-dark.jpg">
+					<p><a class="a_article" href="#">After Dark</a></p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/human-survival.jpg">
-						<p><a class="link3" href="#">Ankward Human Survival Guide</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/morning-dump.jpg">
-						<p><a class="link3" href="#">Morning Dump</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/hablo-geek.jpg">
-						<p><a class="link3" href="#">HabloGeek</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/puromac.jpg">
-						<p><a class="link3" href="#">Puromac</a></p>
-					</div>
-					<div class="col-2 col-2article">
-						<img class="imgarticle" src="img/thumbs/tech-douchebags.jpg">
-						<p><a class="link3" href="#">Tech Douchebags</a></p>
-					</div>
+			<div class="row inline-block row6">
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin2" src="img/thumbs/human-survival.jpg">
+					<p><a class="a_article" href="#">Ankward Human Survival Guide</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin2" src="img/thumbs/morning-dump.jpg">
+					<p><a class="a_article" href="#">Morning Dump</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin2" src="img/thumbs/hablo-geek.jpg">
+					<p><a class="a_article" href="#">HabloGeek</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin2" src="img/thumbs/puromac.jpg">
+					<p><a class="a_article" href="#">Puromac</a></p>
+				</div>
+				<div class="col-2 inline-block">
+					<img class="img_border img_article img_margin2" src="img/thumbs/tech-douchebags.jpg">
+					<p><a class="a_article" href="#">Tech Douchebags</a></p>
 				</div>
 			</div>
 		</div>
 	</article>
-	<aside>
-		<div class="row">
-				<div class="col-2">
-					<h3>Suscribe to 5by5</h3>
-					<div class="cajaaside1">
-						<div class="cajaicons">
-							<img class="icons" src="img/icons/itunes.png">
-							<img class="icons" src="img/icons/rss.png">
-							<img class="icons" src="img/icons/podcast.png">
-							<p><a class="link4" href="#">5by5 on iTunes</p>
-							<p><a class="link4" href="#">Master RSS Feed</a></p>
-							<p><a class="link4" href="#">Pocket Casts</a></p>
-						</div>
-					</div>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="p_footer1">5by5 is a podcast network for geeks, designers, developers, gamers, entrepreneurs, and people like you, with shows hosted by people</p> <p class="p_footer1">including Dan Benjamin, Merlin Mann, Horace Dediu and Jeffrey Zeldman. <a class="a_footer1" href="#">Read more...</a></p>
+					<ul class="ul_footer">
+						<li><a class="a_footer2" href="#">About</a></li>
+						<li><a class="a_footer2" href="#">Shows</a></li>
+						<li><a class="a_footer2" href="#">Subscribe</a></li>
+						<li><a class="a_footer2" href="#">iTunes</a></li>
+						<li><a class="a_footer2" href="#">Schedule</a></li>
+						<li><a class="a_footer2" href="#">Contact</a></li>
+						<li><a class="a_footer2" href="#">Donate</a></li>
+						<li><a class="a_footer2" href="#">Advertise</a></li>
+						<li><a class="a_footer2" href="#">Newsletter</a></li>
+					</ul>
+						<p class="p_footer2">Copyright © 2009-2015 by Dan Benjamin and 5by5 Productions LLC in Austin, Texas</p>
 				</div>
-			</div>	
+			</div>
 		</div>
-	</aside>
+	</footer>
 </body>
 </html>
