--- a/Cinema Layout/index.html
+++ b/Cinema Layout/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Cinema XXI</title>
 	<link rel="stylesheet" href="css/grid-system.css">
-	<link rel="stylesheet" href="css/utilities.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
@@ -12,31 +11,104 @@
 </head>
 <body>
 	<header>
-		<div class="row">
-			<div class="col-3">
-				<img class="logo" src="img/logo.png">
-			</div>
-			<div class="col-2 movie_theater">
-				<h3>MOVIE THEATER</h3>
-			</div>
-			<div class="col-2">
-				<div id="search_button">
-					<span class="icon"><i class="fa fa-search"></i></span>
-					<input type="search" id="search" placeholder="Buscar..."/>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-4">
+					<img class="logo" src="img/logo.png">
+				</div>
+				<div class="col-4">
+					<h5 class="movie_theater">MOVIE THEATER</h5>
+				</div>
+				<div class="col-4">
+					<div>
+						<span class="search_icon"><i class="fa fa-search"></i></span>
+						<input type="search" id="search" placeholder="Buscar..."/>
+					</div>
 				</div>
 			</div>
 		</div>
 	</header>
 	<section>
-		<div class="row">
-			<div class="col-12">
-				<img class="banner" src="img/banner.jpg">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-8 banner">	
+					<div>
+						<img class="big_hero_icon" src="img/icono.jpg">
+					</div>
+				</div>
+				<div class="col-4 main_text_background">
+					<div class="main_text_box">
+						<h1 class="big_hero_heading">BIG HERO 6</h1>
+						<hr>
+						<div class="all_age">All age</div>
+						<p class="directors">Don Hall, Chris Willams</p>
+						<div class="box_ratting">
+							<pre class="pre_text"><span class="main_text_bold">Ratting</span>              :8,5/10</pre>
+							<pre class="pre_text"><span class="main_text_bold">Genre</span>                :Animation, Action, Comedy</pre>
+							<pre class="pre_text"><span class="main_text_bold">Release</span>             :7 November 2014</pre>
+							<p class="main_text_description">The special bond that develops between plus sized inflatable robot Baymax, and prodigy Hiro Hamada, who team up with a group of friends to form a band of high tech heroes</p>
+						</div>
+						<a href="#">
+							<div class="youtube_button same_features_button main_buttons">
+								<i class="fa fa-youtube-play"></i>
+							WATCH TRAILER
+							</div>
+						</a>
+						<a href="#">	
+							<div class="purchase_button same_features_button main_buttons">
+								<i class="fa fa-ticket"></i>
+								BOOK TICKET
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>	
+		</div>
+	</section>
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12 movies_bigbox">	
+					<div class="col-2 img_movies_box">
+						<a href="#">
+							<img class="img_movies" src="img/imagen1.jpg">
+						</a>
+					</div>
+					<div class=" col-2 img_movies_box">
+						<a href="#">
+							<img class="img_movies" src="img/imagen2.jpg">
+						</a>
+					</div>
+					<div class=" col-2 img_movies_box">
+						<a href="#">
+							<img class="img_movies" src="img/imagen3.jpg">
+						</a>
+					</div>
+					<div class="col-2 img_movies_box">
+						<a href="#">
+							<img class="img_movies" src="img/imagen4.jpg">
+						</a>
+					</div>
+					<div class="col-2 img_movies_box">
+						<a href="#">
+							<img class="img_movies" src="img/imagen5.jpg">
+						</a>
+					</div>
+					<div class="col-2 img_movies_box">
+						<a href="#">
+							<img class="img_movies" src="img/imagen6.jpg">
+						</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-2">
-				<img class="icono" src="img/icono.jpg">
-			</div>
-			<div class="col-5 descripcion">
-				<h1 class="big_hero">BIG HERO 6</h1>
+		</div>
+	</section>
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col 12">
+					<object data="http://www.youtube.com/embed/zSWdZVtXT7E"></object>
+				</div>
 			</div>
 		</div>
 	</section>
