--- a/Cinema Layout/index.html
+++ b/Cinema Layout/index.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="col-4">
 					<h5 class="movie_theater">MOVIE THEATER</h5>
-				</div>
+				</div>
 				<div class="col-4">
 					<div>
 						<span class="search_icon"><i class="fa fa-search"></i></span>
@@ -31,21 +31,21 @@
 	<section>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-8 banner">	
+				<div class="col-8" id="banner">	
 					<div>
 						<img class="big_hero_icon" src="img/icono.jpg">
 					</div>
 				</div>
-				<div class="col-4 main_text_background">
+				<div class="col-4" id="main_text_background">
 					<div class="main_text_box">
-						<h1 class="big_hero_heading">BIG HERO 6</h1>
-						<hr>
+						<h1 class="big_hero_heading nobold">BIG HERO 6</h1>
+						<hr class="main_line">
 						<div class="all_age">All age</div>
 						<p class="directors">Don Hall, Chris Willams</p>
 						<div class="box_ratting">
-							<pre class="pre_text"><span class="main_text_bold">Ratting</span>              :8,5/10</pre>
-							<pre class="pre_text"><span class="main_text_bold">Genre</span>                :Animation, Action, Comedy</pre>
-							<pre class="pre_text"><span class="main_text_bold">Release</span>             :7 November 2014</pre>
+							<pre class="pre_text"><span class="bold">Ratting</span>              :8,5/10</pre>
+							<pre class="pre_text"><span class="bold">Genre</span>                :Animation, Action, Comedy</pre>
+							<pre class="pre_text"><span class="bold">Release</span>             :7 November 2014</pre>
 							<p class="main_text_description">The special bond that develops between plus sized inflatable robot Baymax, and prodigy Hiro Hamada, who team up with a group of friends to form a band of high tech heroes</p>
 						</div>
 						<a href="#">
@@ -55,7 +55,7 @@
 							</div>
 						</a>
 						<a href="#">	
-							<div class="purchase_button same_features_button main_buttons">
+							<div class="book_button same_features_button main_buttons">
 								<i class="fa fa-ticket"></i>
 								BOOK TICKET
 							</div>
@@ -68,8 +68,8 @@
 	<section>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-12 movies_bigbox">	
-					<div class="col-2 img_movies_box">
+				<div class="col-12" id="movies_bigbox">	
+					<div class="col-2">
 						<a href="#">
 							<img class="img_movies" src="img/imagen1.jpg">
 						</a>
@@ -92,7 +92,7 @@
 					<div class="col-2 img_movies_box">
 						<a href="#">
 							<img class="img_movies" src="img/imagen5.jpg">
-						</a>
+						</a>
 					</div>
 					<div class="col-2 img_movies_box">
 						<a href="#">
@@ -112,5 +112,74 @@
 			</div>
 		</div>
 	</section>
+	<article>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-5">
+					<h3 class="article_bold_headings">Don't be late,</h3>
+					<h1 class="book_your_ticket">Book your ticket now!</h1>
+					<h3 class="nobold article_bold_headings">Easy, simple & fast.</h3>
+					<a href="#">	
+						<div class="book_button same_features_button big_book_button">
+							<i class="fa fa-ticket"></i>
+							BOOK TICKET
+						</div>
+					</a>
+					<p class="discount_text">Get Discount up to <span class="bold">10%</span> if you are a member!</p>
+				</div>
+				<div class="col-7" id="news">
+					<h3 class="article_bold_headings">News</h3>
+					<h4 class="black_subheadings">Lorem Ipsum Dolor Sit Amet</h4>
+					<p>Nov 11 2014</p>
+					<p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+					<hr class="last_lines main_line">
+					<h4 class="black_subheadings">Lorem Ipsum Dolor Sit Amet</h4>
+					<p>Nov 11 2014</p>
+					<p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+					<hr class="last_lines main_line">
+					<h4 class="orange_text">MORE</h4>
+				</div>
+			</div>
+		</div>
+	</article>
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12">
+					<div class="col-3">
+						<img class="last_pics" src="img/imagen6.jpg">
+					</div>
+					<div class="col-3">
+						<img class="last_pics" src="img/imagen7.jpg">
+					</div>
+					<div class="col-3">
+						<img class="last_pics" src="img/imagen8.jpg">
+					</div>
+					<div class="col-3">
+						<img class="last_pics" src="img/imagen9.jpg">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-5">
+					<h5 class="disclaimer">Disclaimer</h5>
+					<p>This is freebies and not an official webside. I have no intention of disclose any movie, brand, news.</p>
+					<p>My goal here is to train or excercise my skill and share this freebies.</p>
+					<p class="creator">Created by Fikristudio in <span class="bold">Indonesia</span></p>
+					<p class="bold">Dribble.com/bagus_firi</p>
+					<p class="bold">Be.net/bagusfriki</p>
+					<p class="bold">www.friistudio.com</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
