Prettify terminado y comienzo de tini

--- a/Chicama/index.html
+++ b/Chicama/index.html
@@ -11,23 +11,60 @@
 </head>
 <body>
 	<header>
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row">
-				<div class="col-12" id="banner">
-					<nav>
-						<div class="col-2">
-							<div class="sumate_button">
-								Súmate
-							</div>
-						</div>
-						<div class="col-5">
-							<img class="logo" src="img/logo.png">
-						</div>
-					</nav>
-				</div>		
-			</div>			
+				<nav>	
+					<div class="col-2">
+						<a href="#">
+							<div class="sumate_button"><i class="fa fa-hand-o-right"></i> Súmate</div>
+						</a>
+					</div>
+					<div class="col-5">
+						<img  id="logo" src="img/logo.png">
+					</div>
+					<div class="col-5">
+						<ul>
+							<li><a href="#">INICIO</a></li>
+							<li><a href="#">NOSOTROS</a></li>
+							<li><a href="#">CONTACTO</a></li>
+						</ul>
+					</div>
+				</nav>
+			</div>
 		</div>
 	</header>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="col-4 section_img_box">
+						<img class="section_img" src="img/grupal.jpg">
+						<h4><a href="#">El LENGUAJE DEL FUTURO</a></h4>
+						<hr>
+					</div>
+					<div class="col-4 section_img_box">
+						<img class="section_img" src="img/grupal.jpg">
+						<h4><a href="#">APRENDER A APRENDER</a></h4>
+						<hr>
+					</div>
+					<div class="col-4 section_img_box">
+						<img class="section_img" src="img/grupal.jpg">
+						<h4><a href="#">EMPRENDIMIENTO</a></h4>
+						<hr>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-5">
+					<p>Laboratoria 2014 | sumate@laboratoria.la | tel: <a class="skype_num" href="callto://+51 997 350 298"><i class="fa fa-skype"></i> +51 997 350 298</a></p>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
 
