Tini terminado e inicio de ecomunidad

--- a/Tini/index.html
+++ b/Tini/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Tini</title>
 		<link rel="stylesheet" href="css/grid-system.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
@@ -11,8 +12,8 @@
 			<div class="container">
 				<div class="row">	
 					<nav>
-						<div class="col-7">
-							<div class="sumate_button">SÚMATE</div>
+						<div class="col-7">	
+							<div class="sumate_button"><a href="#">SÚMATE</a></div>
 						</div>
 						<div class="col-5">
 							<ul>
@@ -34,11 +35,63 @@
 		<section>
 			<div class="container">
 				<div class="row">
-					<div class="col-6 section_boxes">
-					
+					<div class="col-5 section_boxes">
+						<img class="sample_img" src="http://placehold.it/300x300">
+						<h2>Ejemplo 1</h2>
+						<p class="p_boxes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+						<div class="leemas_button">
+							<a href="#">LEE MÁS</a>
+						</div>
+					</div>
+					<div class="col-5 section_boxes">
+						<img class="sample_img" src="http://placehold.it/300x300">
+						<h2>Ejemplo 1</h2>
+						<p class="p_boxes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+						<div class="leemas_button">
+							<a href="#">LEE MÁS</a>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-5 section_boxes">
+						<img class="sample_img" src="http://placehold.it/300x300">
+						<h2>Ejemplo 1</h2>
+						<p class="p_boxes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+						<div class="leemas_button">
+							<a href="#">LEE MÁS</a>
+						</div>
+					</div>
+					<div class="col-5 section_boxes">
+						<img class="sample_img" src="http://placehold.it/300x300">
+						<h2>Ejemplo 1</h2>
+						<p class="p_boxes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+						<div class="leemas_button">
+							<a href="#">LEE MÁS</a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-6">
+						Laboratoria 2014 | sumate@laboratoria.la | Tel: <a class="skype_num" href="callto://+51 997 350 298"><i class="fa fa-skype"></i> +51 997 350 298</a>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
